# django-chatbot-lambda

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  cdk.json  pyproject.toml
django_chatbot/: django_chatbot_stack.py
workspaces/retrieval/: Dockerfile  pyproject.toml
workspaces/retrieval/src/namespace/retrieval/: manage.py
workspaces/retrieval/src/namespace/retrieval/retrieval/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
workspaces/retrieval/src/namespace/retrieval/retrieval/base_settings/: base.py  development.py  production.py
workspaces/retrieval/src/namespace/retrieval/retrieval_app/: apps.py  checks.py  urls.py  utils.py  views.py
workspaces/retrieval/src/namespace/retrieval/retrieval_app/jinja2/: answer.html  index.html
workspaces/retrieval/src/namespace/retrieval/retrieval_app/templates/: _base.html  index.html
