[tool.poetry]
name = "namespace-retrieval"
version = "0.1.0"
description = ""
authors = ["Andreas Spannagel <spannagel.andreas@gmail.com>"]
packages = [{include = "namespace", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"
ruff = "^0.3.7"
django = "^5.0.4"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"